raw-manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: webapp-ns
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: webapp
